--- a/weyl_potential_pk.ipynb
+++ b/weyl_potential_pk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,22 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "CosmoSevereError",
-     "evalue": "\n\nError in Class: Class did not read input parameter(s): e_pi\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCosmoSevereError\u001b[0m                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-143-2aa65c831859>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mcosmo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mClass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mcosmo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mcosmo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mclassy.pyx\u001b[0m in \u001b[0;36mclassy.Class.compute\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mCosmoSevereError\u001b[0m: \n\nError in Class: Class did not read input parameter(s): e_pi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "params = {'output': 'tCl lCl mPk mTk',\n",
     "          'l_max_scalars': 2000,\n",
@@ -50,7 +37,6 @@
     "          'omega_b': 0.03,\n",
     "          'omega_cdm': 0.25,\n",
     "          'gauge': 'newtonian',\n",
-    "          'e_pi': 0.0,\n",
     "         'z_max_pk': 1000}\n",
     "\n",
     "cosmo = Class()\n",
@@ -61,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,11 +68,13 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(type(weyl))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -105,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
