--- a/notebooks/weyl_potential_pk.ipynb
+++ b/notebooks/weyl_potential_pk.ipynb
@@ -37,7 +37,7 @@
     "          'omega_b': 0.03,\n",
     "          'omega_cdm': 0.25,\n",
     "          'gauge': 'newtonian',\n",
-    "         'z_max_pk': 1000}\n",
+    "         'z_max_pk': '1000'}\n",
     "\n",
     "cosmo = Class()\n",
     "cosmo.set(params)\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
